--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -14,7 +14,7 @@ id = "dualbot-IMptUOlt39Q1"
 # database = "local"
 
 # Whether to enable telemetry (default: true). No personal data is collected.
-enable_telemetry = true
+enable_telemetry = false
 
 # List of environment variables to be provided by each user to use the app.
 user_env = []
